--- a/index.html
+++ b/index.html
@@ -3,178 +3,91 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Qwen Chat</title>
+    <title>Personal Blog</title>
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #f4f4f9;
+            line-height: 1.6;
             margin: 0;
             padding: 0;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            height: 100vh;
+            background-color: #f4f4f9;
+            color: #333;
         }
-        .chat-container {
-            width: 400px;
-            background-color: #fff;
-            border-radius: 8px;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-            overflow: hidden;
-            display: flex;
-            flex-direction: column;
-        }
-        .chat-header {
-            background-color: #007bff;
+        header {
+            background: #4CAF50;
             color: white;
-            padding: 15px;
+            padding: 20px 0;
             text-align: center;
-            font-size: 18px;
+        }
+        header h1 {
+            margin: 0;
+            font-size: 2.5em;
+        }
+        nav {
+            background: #333;
+            color: white;
+            display: flex;
+            justify-content: center;
+            padding: 10px;
+        }
+        nav a {
+            color: white;
+            margin: 0 15px;
+            text-decoration: none;
             font-weight: bold;
         }
-        .chat-messages {
-            flex: 1;
-            padding: 15px;
-            overflow-y: auto;
-            max-height: 400px;
+        nav a:hover {
+            text-decoration: underline;
         }
-        .message {
-            margin-bottom: 10px;
+        .container {
+            max-width: 800px;
+            margin: 20px auto;
+            padding: 20px;
+            background: white;
+            border-radius: 8px;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
         }
-        .message.user {
-            text-align: right;
+        article {
+            margin-bottom: 20px;
         }
-        .message.bot {
-            text-align: left;
+        article h2 {
+            border-bottom: 2px solid #4CAF50;
+            padding-bottom: 5px;
         }
-        .message-content {
-            display: inline-block;
-            padding: 10px;
-            border-radius: 20px;
-            max-width: 70%;
-        }
-        .message.user .message-content {
-            background-color: #dcf8c6;
-        }
-        .message.bot .message-content {
-            background-color: #e9ecef;
-        }
-        .chat-input {
-            display: flex;
-            border-top: 1px solid #ddd;
-        }
-        .chat-input input {
-            flex: 1;
-            padding: 15px;
-            border: none;
-            outline: none;
-            font-size: 16px;
-        }
-        .chat-input button {
-            padding: 15px;
-            border: none;
-            background-color: #007bff;
+        footer {
+            text-align: center;
+            padding: 10px 0;
+            background: #333;
             color: white;
-            font-size: 16px;
-            cursor: pointer;
-        }
-        .chat-input button:hover {
-            background-color: #0056b3;
+            position: relative;
+            bottom: 0;
+            width: 100%;
         }
     </style>
 </head>
 <body>
-    <div class="chat-container">
-        <div class="chat-header">
-            Qwen Chat (ChatGPT API)
-        </div>
-        <div class="chat-messages" id="chatMessages">
-            <!-- Messages will appear here -->
-        </div>
-        <div class="chat-input">
-            <input type="text" id="userInput" placeholder="Type a message..." />
-            <button onclick="sendMessage()">Send</button>
-        </div>
+    <header>
+        <h1>My Personal Blog</h1>
+    </header>
+    <nav>
+        <a href="#home">Home</a>
+        <a href="#about">About</a>
+        <a href="#contact">Contact</a>
+    </nav>
+    <div class="container">
+        <article>
+            <h2>Welcome to My Blog</h2>
+            <p>Posted on <em>October 10, 2023</em></p>
+            <p>Hello and welcome! This is the first post on my personal blog where I'll be sharing my thoughts, experiences, and knowledge about various topics.</p>
+        </article>
+        <article>
+            <h2>Why I Started Blogging</h2>
+            <p>Posted on <em>October 12, 2023</em></p>
+            <p>Blogging has always been a passion of mine. It's a great way to express myself and connect with like-minded individuals across the globe.</p>
+        </article>
     </div>
-
-    <script>
-        function sendMessage() {
-            const userInput = document.getElementById('userInput');
-            const messageText = userInput.value.trim();
-            if (messageText === '') return;
-
-            // Add user message to chat
-            addMessage('user', messageText);
-
-            // Clear input field
-            userInput.value = '';
-
-            // Call ChatGPT-compatible API for bot response
-            callChatGPTAPI(messageText).then(response => {
-                addMessage('bot', response);
-            }).catch(error => {
-                console.error('Error calling ChatGPT API:', error);
-                addMessage('bot', 'Sorry, I encountered an error while processing your request.');
-            });
-        }
-
-        function addMessage(sender, text) {
-            const chatMessages = document.getElementById('chatMessages');
-            const messageDiv = document.createElement('div');
-            messageDiv.classList.add('message', sender);
-
-            const contentDiv = document.createElement('div');
-            contentDiv.classList.add('message-content');
-            contentDiv.textContent = text;
-
-            messageDiv.appendChild(contentDiv);
-            chatMessages.appendChild(messageDiv);
-
-            // Scroll to bottom
-            chatMessages.scrollTop = chatMessages.scrollHeight;
-        }
-
-        async function callChatGPTAPI(userMessage) {
-            // Replace with your actual ChatGPT-compatible API endpoint and API key
-            const apiUrl = 'https://api.lkeap.cloud.tencent.com/v1/chat/completions'; // Example endpoint
-            const apiKey = 'sk-UcIgFJPGFKxizQnQYuIdtT6wYiMhyDhbDl5bDbDOFftFPZZP'; // Replace with your actual API key
-
-            try {
-                const response = await fetch(apiUrl, {
-                    method: 'POST',
-                    headers: {
-                        'Content-Type': 'application/json',
-                        'Authorization': `Bearer ${apiKey}`
-                    },
-                    body: JSON.stringify({
-                        model: "deepseek-r1", // Specify the model you want to use
-                        messages: [
-                            { role: "system", content: "You are a helpful assistant." },
-                            { role: "user", content: userMessage }
-                        ],
-                        max_tokens: 150 // Limit the response length
-                    })
-                });
-
-                if (!response.ok) {
-                    throw new Error(`HTTP error! status: ${response.status}`);
-                }
-
-                const data = await response.json();
-                return data.choices[0].message.content.trim() || 'No response from server.';
-            } catch (error) {
-                console.error('ChatGPT API call failed:', error);
-                return 'An error occurred while fetching the response.';
-            }
-        }
-
-        // Enter key to send message
-        document.getElementById('userInput').addEventListener('keypress', function(e) {
-            if (e.key === 'Enter') {
-                sendMessage();
-            }
-        });
-    </script>
+    <footer>
+        &copy; 2023 My Personal Blog. All rights reserved.
+    </footer>
 </body>
 </html>
